--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.1.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc02'
 
+    implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -62,7 +63,9 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'io.apptik.widget:multislider:1.3'
-    implementation "com.mikepenz:aboutlibraries:7.0.4"
+    implementation ("com.mikepenz:aboutlibraries:7.0.4") {
+        exclude group: 'androidx.constraintlayout'
+    }
 
     // Koin for Android
     implementation 'org.koin:koin-android:2.0.1'
