Include custom browser tabs

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,8 @@ dependencies {
         exclude group: 'androidx.constraintlayout'
     }
 
+    implementation "androidx.browser:browser:1.0.0"
+
     // Koin for Android
     implementation 'org.koin:koin-android:2.0.1'
     // or Koin for Lifecycle scoping
