--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'io.apptik.widget:multislider:1.3'
+    implementation 'com.samskivert:jmustache:1.15'
     implementation ("com.mikepenz:aboutlibraries:7.0.4") {
         exclude group: 'androidx.constraintlayout'
     }
@@ -93,7 +94,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-reactivestreams:$lifecycle_version" // For Kotlin use lifecycle-reactivestreams-ktx
 
     // Room
-    def room_version = "2.2.1"
+    def room_version = "2.2.2"
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version" // For Kotlin use kapt instead of annotationProcessor
@@ -106,6 +107,7 @@ dependencies {
     testImplementation "androidx.arch.core:core-testing:$lifecycle_version"
     testImplementation 'org.jetbrains.kotlin:kotlin-test:1.1.51'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit:1.1.51'
+    testImplementation "io.mockk:mockk:1.9.3"
 
 
     // Android Test Implementation
