--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,8 @@ apply plugin: 'kotlin-kapt'
 
 apply plugin: "androidx.navigation.safeargs.kotlin"
 
+apply plugin: 'com.cookpad.android.licensetools'
+
 
 android {
 
@@ -66,9 +68,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'io.apptik.widget:multislider:1.3'
     implementation 'com.samskivert:jmustache:1.15'
-    implementation ("com.mikepenz:aboutlibraries:7.0.4") {
-        exclude group: 'androidx.constraintlayout'
-    }
 
     implementation "androidx.browser:browser:1.0.0"
 
