--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.6.0-beta04'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.50"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0"
+        classpath 'com.cookpad.android.licensetools:license-tools-plugin:1.7.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
