--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,8 +21,8 @@ android {
         applicationId "de.enduni.monsterlair"
         minSdkVersion 24
         targetSdkVersion 29
-        versionCode 3
-        versionName "1.1.1"
+        versionCode 4
+        versionName "1.1.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -55,6 +55,7 @@ dependencies {
     kapt "com.squareup.moshi:moshi-kotlin-codegen:1.9.1"
     implementation "com.squareup.moshi:moshi:1.9.1"
 
+    implementation 'com.jaredrummler:material-spinner:1.3.1'
     implementation 'com.google.android.material:material:1.2.0-alpha01'
     implementation 'androidx.navigation:navigation-fragment:2.1.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc02'
