--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,6 @@ dependencies {
     kapt "com.squareup.moshi:moshi-kotlin-codegen:1.9.1"
     implementation "com.squareup.moshi:moshi:1.9.1"
 
-    implementation 'com.jaredrummler:material-spinner:1.3.1'
     implementation 'com.google.android.material:material:1.2.0-alpha01'
     implementation 'androidx.navigation:navigation-fragment:2.1.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc02'
@@ -72,11 +71,8 @@ dependencies {
 
     implementation "androidx.browser:browser:1.0.0"
 
-    // Koin for Android
     implementation 'org.koin:koin-android:2.0.1'
-    // or Koin for Lifecycle scoping
     implementation 'org.koin:koin-androidx-scope:2.0.1'
-    // or Koin for Android Architecture ViewModel
     implementation 'org.koin:koin-androidx-viewmodel:2.0.1'
 
     def nav_version = "2.1.0"
@@ -87,17 +83,16 @@ dependencies {
     def lifecycle_version = "2.1.0"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-reactivestreams:$lifecycle_version"
+    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
-    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version" // For Kotlin use kapt instead of annotationProcessor
 
-    // optional - ReactiveStreams support for LiveData
-    implementation "androidx.lifecycle:lifecycle-reactivestreams:$lifecycle_version" // For Kotlin use lifecycle-reactivestreams-ktx
 
     // Room
     def room_version = "2.2.2"
 
     implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version" // For Kotlin use kapt instead of annotationProcessor
+    kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
 
 
