--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.0-beta04'
+        classpath 'com.android.tools.build:gradle:3.6.0-rc02'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.50"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0"
         classpath 'com.cookpad.android.licensetools:license-tools-plugin:1.7.0'
