--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,9 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.0-rc02'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.50"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0"
+        classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.61"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.2.1"
         classpath 'com.cookpad.android.licensetools:license-tools-plugin:1.7.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
