--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,9 +21,16 @@ android {
         applicationId "de.enduni.monsterlair"
         minSdkVersion 24
         targetSdkVersion 29
-        versionCode 10
-        versionName "1.4"
+        versionCode 11
+        versionName "2.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
+
     }
 
     buildTypes {
@@ -60,16 +67,16 @@ dependencies {
     kapt "com.squareup.moshi:moshi-kotlin-codegen:1.9.1"
     implementation "com.squareup.moshi:moshi:1.9.1"
 
-    implementation 'com.google.android.material:material:1.2.0-alpha05'
-    implementation 'androidx.navigation:navigation-fragment:2.2.1'
+    implementation 'com.google.android.material:material:1.3.0-alpha01'
+    implementation 'androidx.navigation:navigation-fragment:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'androidx.fragment:fragment-ktx:1.2.2'
+    implementation 'androidx.core:core-ktx:1.3.0'
+    implementation 'androidx.fragment:fragment-ktx:1.2.5'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'io.apptik.widget:multislider:1.3'
     implementation 'com.samskivert:jmustache:1.15'
@@ -80,7 +87,7 @@ dependencies {
     implementation 'org.koin:koin-androidx-scope:2.0.1'
     implementation 'org.koin:koin-androidx-viewmodel:2.0.1'
 
-    def nav_version = "2.2.1"
+    def nav_version = "2.3.0"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
@@ -93,7 +100,7 @@ dependencies {
 
 
     // Room
-    def room_version = "2.2.3"
+    def room_version = "2.2.5"
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
