--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,4 +119,5 @@ dependencies {
     // Android Test Implementation
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation "androidx.room:room-testing:$room_version"
 }
