Add splash screen with transitions

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,8 @@ android {
 
     kotlinOptions {
         jvmTarget = "1.8"
+        freeCompilerArgs += "-Xopt-in=org.mylibrary.OptInAnnotation -Xopt-in=kotlin.RequiresOptIn"
     }
-
 
     viewBinding {
         enabled = true
