--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,10 @@ dependencies {
     implementation 'io.apptik.widget:multislider:1.3'
     implementation 'com.samskivert:jmustache:1.15'
 
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation "io.reactivex.rxjava3:rxjava:3.0.4"
+    implementation "io.reactivex.rxjava3:rxkotlin:3.0.0"
+
     implementation "androidx.browser:browser:1.2.0"
 
     implementation 'org.koin:koin-android:2.0.1'
