--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,7 +72,7 @@ dependencies {
     kapt "com.squareup.moshi:moshi-kotlin-codegen:1.9.1"
     implementation "com.squareup.moshi:moshi:1.9.1"
 
-    implementation 'com.google.android.material:material:1.3.0-alpha01'
+    implementation 'com.google.android.material:material:1.3.0-alpha02'
     implementation 'androidx.navigation:navigation-fragment:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
 
@@ -80,15 +80,14 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.3.0'
+    implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.fragment:fragment-ktx:1.2.5'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'io.apptik.widget:multislider:1.3'
     implementation 'com.samskivert:jmustache:1.15'
 
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-    implementation "io.reactivex.rxjava3:rxjava:3.0.4"
-    implementation "io.reactivex.rxjava3:rxkotlin:3.0.0"
+
+    implementation "com.otaliastudios:autocomplete:1.1.0"
 
     implementation "androidx.browser:browser:1.2.0"
 
