--- a/app/licenses.yml
+++ b/app/licenses.yml
@@ -1,9 +1,3 @@
-- artifact: androidx.lifecycle:lifecycle-service:+
-  name: Android Lifecycle Service
-  copyrightHolder: The Android Open Source Project
-  license: The Apache Software License, Version 2.0
-  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
-  url: https://developer.android.com/topic/libraries/architecture/index.html
 - artifact: androidx.documentfile:documentfile:+
   name: Android Support Library Document File
   copyrightHolder: The Android Open Source Project
@@ -16,12 +10,6 @@
   license: The Apache Software License, Version 2.0
   licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
   url: http://developer.android.com/tools/extras/support-library.html
-- artifact: androidx.lifecycle:lifecycle-process:+
-  name: Android Lifecycle Process
-  copyrightHolder: The Android Open Source Project
-  license: The Apache Software License, Version 2.0
-  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
-  url: https://developer.android.com/topic/libraries/architecture/index.html
 - artifact: com.squareup.moshi:moshi:+
   name: Moshi
   copyrightHolder: Square, Inc
@@ -92,12 +80,6 @@
   license: The Apache Software License, Version 2.0
   licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
   url: https://github.com/JakeWharton/timber
-- artifact: androidx.legacy:legacy-support-core-ui:+
-  name: Android Support Library core UI
-  copyrightHolder: The Android Open Source Project
-  license: The Apache Software License, Version 2.0
-  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
-  url: http://developer.android.com/tools/extras/support-library.html
 - artifact: androidx.annotation:annotation:+
   name: Android Support Library Annotations
   copyrightHolder: The Android Open Source Project
@@ -106,12 +88,6 @@
   url: http://developer.android.com/tools/extras/support-library.html
 - artifact: androidx.navigation:navigation-runtime-ktx:+
   name: Android Navigation Runtime Kotlin Extensions
-  copyrightHolder: The Android Open Source Project
-  license: The Apache Software License, Version 2.0
-  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
-  url: https://developer.android.com/topic/libraries/architecture/index.html
-- artifact: androidx.navigation:navigation-ui:+
-  name: Android Navigation UI
   copyrightHolder: The Android Open Source Project
   license: The Apache Software License, Version 2.0
   licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
@@ -134,18 +110,6 @@
   license: The Apache Software License, Version 2.0
   licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
   url: http://developer.android.com/tools/extras/support-library.html
-- artifact: androidx.asynclayoutinflater:asynclayoutinflater:+
-  name: Android Support Library Async Layout Inflater
-  copyrightHolder: The Android Open Source Project
-  license: The Apache Software License, Version 2.0
-  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
-  url: http://developer.android.com/tools/extras/support-library.html
-- artifact: org.jetbrains.kotlinx:kotlinx-coroutines-core:+
-  name: kotlinx-coroutines-core
-  copyrightHolder: JetBrains
-  license: The Apache Software License, Version 2.0
-  licenseUrl: https://www.apache.org/licenses/LICENSE-2.0.txt
-  url: https://github.com/Kotlin/kotlinx.coroutines
 - artifact: androidx.arch.core:core-runtime:+
   name: Android Arch-Runtime
   copyrightHolder: The Android Open Source Project
@@ -206,12 +170,6 @@
   license: The Apache Software License, Version 2.0
   licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
   url: https://developer.android.com/jetpack/androidx
-- artifact: androidx.slidingpanelayout:slidingpanelayout:+
-  name: Android Support Library Sliding Pane Layout
-  copyrightHolder: The Android Open Source Project
-  license: The Apache Software License, Version 2.0
-  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
-  url: http://developer.android.com/tools/extras/support-library.html
 - artifact: com.google.android.material:material:+
   name: Material Components for Android
   copyrightHolder: The Android Open Source Project
@@ -248,24 +206,12 @@
   license: The Apache License, Version 2.0
   licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
   url: https://kotlinlang.org/
-- artifact: androidx.swiperefreshlayout:swiperefreshlayout:+
-  name: Android Support Library Custom View
-  copyrightHolder: The Android Open Source Project
-  license: The Apache Software License, Version 2.0
-  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
-  url: http://developer.android.com/tools/extras/support-library.html
 - artifact: androidx.customview:customview:+
   name: Android Support Library Custom View
   copyrightHolder: The Android Open Source Project
   license: The Apache Software License, Version 2.0
   licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
   url: http://developer.android.com/tools/extras/support-library.html
-- artifact: androidx.navigation:navigation-ui-ktx:+
-  name: Android Navigation UI Kotlin Extensions
-  copyrightHolder: The Android Open Source Project
-  license: The Apache Software License, Version 2.0
-  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
-  url: https://developer.android.com/topic/libraries/architecture/index.html
 - artifact: androidx.navigation:navigation-fragment:+
   name: Android Navigation Fragment
   copyrightHolder: The Android Open Source Project
@@ -475,12 +421,6 @@
   license: The Apache Software License, Version 2.0
   licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
   url: https://developer.android.com/jetpack/androidx
-- artifact: androidx.lifecycle:lifecycle-extensions:+
-  name: Android Lifecycle Extensions
-  copyrightHolder: The Android Open Source Project
-  license: The Apache Software License, Version 2.0
-  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
-  url: https://developer.android.com/topic/libraries/architecture/index.html
 - artifact: androidx.navigation:navigation-common-ktx:+
   name: Android Navigation Common Kotlin Extensions
   copyrightHolder: The Android Open Source Project
@@ -541,3 +481,61 @@
   license: The Apache License, Version 2.0
   licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
   url: https://kotlinlang.org/
+- artifact: androidx.lifecycle:lifecycle-runtime-ktx:+
+  name: Android Lifecycle Kotlin Extensions
+  copyrightHolder: The Android Open Source Project
+  license: The Apache Software License, Version 2.0
+  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
+  url: https://developer.android.com/jetpack/androidx/releases/lifecycle#2.3.1
+- artifact: androidx.dynamicanimation:dynamicanimation:+
+  name: Android Support DynamicAnimation
+  copyrightHolder: The Android Open Source Project
+  license: The Apache Software License, Version 2.0
+  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
+  url: http://developer.android.com/tools/extras/support-library.html
+- artifact: org.jetbrains.kotlin:kotlin-parcelize-runtime:+
+  name: Parcelize Runtime
+  copyrightHolder: The Android Open Source Project
+  license: The Apache License, Version 2.0
+  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
+  url: https://kotlinlang.org/
+- artifact: com.google.guava:listenablefuture:+
+  name: Guava ListenableFuture only
+  copyrightHolder: Google Inc
+  license: The Apache Software License, Version 2.0
+- artifact: androidx.lifecycle:lifecycle-viewmodel-savedstate:+
+  name: Android Lifecycle ViewModel with SavedState
+  copyrightHolder: The Android Open Source Project
+  license: The Apache Software License, Version 2.0
+  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
+  url: https://developer.android.com/jetpack/androidx/releases/lifecycle#2.3.1
+- artifact: androidx.tracing:tracing:+
+  name: Android Tracing
+  copyrightHolder: The Android Open Source Project
+  license: The Apache Software License, Version 2.0
+  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
+  url: https://developer.android.com/jetpack/androidx/releases/tracing#1.0.0
+- artifact: androidx.savedstate:savedstate-ktx:+
+  name: SavedState Kotlin Extensions
+  copyrightHolder: The Android Open Source Project
+  license: The Apache Software License, Version 2.0
+  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
+  url: https://developer.android.com/jetpack/androidx/releases/savedstate#1.1.0
+- artifact: androidx.lifecycle:lifecycle-reactivestreams-ktx:+
+  name: Android Lifecycle ReactiveStreams KTX
+  copyrightHolder: The Android Open Source Project
+  license: The Apache Software License, Version 2.0
+  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
+  url: https://developer.android.com/jetpack/androidx/releases/lifecycle#2.3.1
+- artifact: androidx.annotation:annotation-experimental:+
+  name: Experimental annotation
+  copyrightHolder: The Android Open Source Project
+  license: The Apache Software License, Version 2.0
+  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
+  url: https://developer.android.com/jetpack/androidx
+- artifact: androidx.concurrent:concurrent-futures:+
+  name: AndroidX Futures
+  copyrightHolder: The Android Open Source Project
+  license: The Apache Software License, Version 2.0
+  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
+  url: https://developer.android.com/topic/libraries/architecture/index.html
